# projet-phil

./: README.md  main.py  pyproject.toml
prompts/: system_prompt.txt
src/evaluation/: __init__.py  llm_evaluator.py
src/export/: __init__.py  combined_export.py  excel_export.py  markdown_export.py  word_export.py
src/parsers/: __init__.py  docx_parser.py  excel_parser.py  html_parser.py  pdf_parser.py  url_fetcher.py  zip_handler.py
